<?xml version="1.0"?>
<package>
<name>mrl_vr</name>
<version>0.0.0</version>
<description>The mrl_vr package</description>

 
  <maintainer email="ms.salamati@gmail.com">soroosh</maintainer>


  <license>TODO</license>

  <build_depend>roscpp</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>cv_bridge</run_depend>
  <export>

  </export>
  </package>
